--- a/2018_SCALE16/Demo-MicroserviceHell/deployments/backend.yaml
+++ b/2018_SCALE16/Demo-MicroserviceHell/deployments/backend.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: "dvonthenen/jop-backend:latest"
+          image: "dvonthenen/jop-backend:v0.0.1"
           imagePullPolicy: Always
           env:
             - name: HOST_IP
