--- a/2018_SCALE16/Demo-MicroserviceHell/deployments/frontend.yaml
+++ b/2018_SCALE16/Demo-MicroserviceHell/deployments/frontend.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: "dvonthenen/jop-frontend:latest"
+          image: "dvonthenen/jop-frontend:v0.0.1"
           imagePullPolicy: Always
           env:
             - name: HOST_IP
